# ina

./: .gitignore  .ocamlformat  build.ml  dune  dune-project  ina.opam  main.py  test.py
examples/: cat.ray
ina/: README.md  ast.ml  dune  import.ml  token.ml
ina/codegen/: c.ml  ctx.ml  dune  llvm_gen.ml  llvm_opt.c  mangle.ml
ina/driver/: driver.ml  dune
ina/errors/: color.ml  diagnostic.ml  dune  emitter.ml  handler.ml  styled_buffer.ml
ina/front/: ast_printer.ml  dune  lexer.ml  parser.ml  tokenizer.ml
ina/ir/: basicblock.ml  dune  func.ml  inst.ml  module.ml
ina/lowering/: builder.ml  context.ml  dune  expr.ml  item.ml
ina/metadata/: decoder.ml  encoder.ml
ina/middle/: ctx.ml  decision.ml  def_id.ml  dune  ty.ml
ina/monomorphize/: collect.ml  dune
ina/ppx/: dbg.ml  dune  ice.ml
ina/resolve/: late.ml  module_graph.ml  resolver.ml
ina/sema/: dune  exhaustiveness.ml  infer.ml  linearity.ml  tychk.ml  unification_table.ml
ina/session/: args.ml  config.ml  sess.ml
ina/source/: source_map.ml  span.ml
ina/structures/: dune  hashmap.ml  vec.ml
ina/transform/: dune  pass_manager.ml  phi_elimination.ml  transform.ml
ina/utils/: debugtree.ml  dune  object.ml  panic.ml  path.ml  (+2 more)
ray/: Ast.py  Errors.py  Token.py  ast.ml  dune  token.ml  ty.ml
ray/codegen/: dune  intrinsics.ml  llvm_gen.ml  x86_64.py
ray/codegen/tests/: test_x86_64.py
src/: Ast.py  Errors.py  Lexer.py  Parser.py  Token.py  __init__.py  ast_lowering.py  codegen.py  constant_fold.py  driver.ml  dune  ir.py  ray.py  test.py  tychk.py  utils.py
tests/: behavior.ina  main.ina
(+301 files in other folders)
