(library
 (name codegen)
 (libraries
  ir
  ast
  resolve
  session
  llvm
  llvm.target
  llvm.analysis
  llvm.debuginfo
  llvm_X86)
 (modules llvm_gen intrinsics)
 (foreign_stubs
  (language c)
  (names llvm_opt))
 (c_library_flags
  (-lLLVMPasses
   -lLLVMCoroutines
   -lLLVMipo
   -lLLVMVectorize
   -lLLVMLinker
   -lLLVMFrontendOpenMP
   -lLLVMIRPrinter))
 (flags
  (-cclib -lcodegen_stubs)))
